--- a/Experience-Skills.html
+++ b/Experience-Skills.html
@@ -11,10 +11,10 @@
     <nav>
         <ul>
            
-            <li><a href="../Nueva carpeta/index.html">My Resumen</a></li>
-            <li><a href="../Nueva carpeta/Education_courses.html">Education an Courses</a></li>
-            <li><a href="../Nueva carpeta/hobbies.html">Hobbies</a></li>
-            <li><a href="../Nueva carpeta/contact.html">Contact</a></li> <br><br>
+            <li><a href="/index.html">My Resumen</a></li>
+            <li><a href="/Education_courses.html">Education an Courses</a></li>
+            <li><a href="/hobbies.html">Hobbies</a></li>
+            <li><a href="/contact.html">Contact</a></li> <br><br>
         </ul>
     </nav>
 
