--- a/hobbies.html
+++ b/hobbies.html
@@ -10,10 +10,10 @@
     
     <nav>
         <ul>
-            <li><a href="../Nueva carpeta/index.html">My Resumen</a></li>
-            <li><a href="../Nueva carpeta/Experience-Skills.html">Work Experience and Skills</a></li>
-            <li><a href="../Nueva carpeta/Education_courses.html">Education an Courses</a></li>
-            <li><a href="../Nueva carpeta/contact.html">Contact</a></li><br><br><br><br><br><br>
+            <li><a href="/index.html">My Resumen</a></li>
+            <li><a href="/Experience-Skills.html">Work Experience and Skills</a></li>
+            <li><a href="/Education_courses.html">Education an Courses</a></li>
+            <li><a href="/contact.html">Contact</a></li><br><br><br><br><br><br>
         </ul>
     </nav>
     <hr>
