--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
     
     <nav>
         <ul>
-            <li><a href="/hobbies.html">My Resumen</a></li>
-            <li><a href="/Education_courses.html">Work Experience and Skills</a></li>
-            <li><a href="/Education_courses.html">Education an Courses</a></li>
-            <li><a href="/hobbies.html">Hobbies</a></li> <br> <br> <br>
+            <li><a href="./hobbies.html">My Resumen</a></li>
+            <li><a href="./Education_courses.html">Work Experience and Skills</a></li>
+            <li><a href="./Education_courses.html">Education an Courses</a></li>
+            <li><a href="./hobbies.html">Hobbies</a></li> <br> <br> <br>
            
         </ul>
     </nav>
