--- a/Education_courses.html
+++ b/Education_courses.html
@@ -10,10 +10,10 @@
     
     <nav>
         <ul>
-            <li><a href="/index.html">My Resumen</a></li>
-            <li><a href="/Experience-Skills.html">Work Experience and Skills</a></li>
-            <li><a href="/hobbies.html">Hobbies</a></li>
-            <li><a href="/contact.html">Contact</a></li> <br> <br> 
+            <li><a href="./index.html">My Resumen</a></li>
+            <li><a href="./Experience-Skills.html">Work Experience and Skills</a></li>
+            <li><a href="./hobbies.html">Hobbies</a></li>
+            <li><a href="./contact.html">Contact</a></li> <br> <br> 
         </ul>
     </nav><hr>
 
